# restapis_fastapi

./: .gitignore  README.md  pyproject.toml
s02/socials_api/: main.py
s02/socials_api/api/models/: user_comments.py  user_posts.py
s02/socials_api/api/routes/: user_comments.py  user_posts.py
s02/socials_api/api/schema/: user_comments.py  user_posts.py
s02/socials_api/models/: user_comments.py  user_posts.py
s02/socials_api/routes/: user_comments.py  user_posts.py
s02/socials_api/schema/: user_comments.py
s02/socials_api/tests/: conftest.py  utils.py
s02/socials_api/tests/routes/: test_user_comments.py  test_user_posts.py
s03/socials_api/: .env.example  config.py  main.py
s03/socials_api/api/models/: database.py
s03/socials_api/api/routes/: user_comments.py  user_posts.py
s03/socials_api/api/schema/: user_comments.py  user_posts.py
s03/socials_api/tests/: conftest.py  utils.py
s03/socials_api/tests/routes/: test_user_comments.py  test_user_posts.py
